--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,9 +57,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-  - assets/images/sodaIcon.png
-  - assets/images/sodaText.png
-  - assets/images/sodaTextWithIcon.png
+  - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
